// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`searchHelpers converSearchStringToObject converts search string 1`] = `
Object {
  "contextFilters": Array [],
  "contextTypes": Array [],
  "fallback": "true",
  "grepCodes": Array [],
  "language": "nb",
  "languageFilter": Array [
    "1",
    "2",
    "3",
  ],
  "page": "3",
  "programs": Array [],
  "query": "test",
  "relevance": Array [],
  "resourceTypes": Array [],
  "subjects": Array [
    "urn:test:3",
    "urn:test:1",
    "urn:test:2",
  ],
}
`;

exports[`searchHelpers converSearchStringToObject with no location 1`] = `
Object {
  "contextFilters": Array [],
  "contextTypes": Array [],
  "fallback": "true",
  "grepCodes": Array [],
  "language": "nb",
  "languageFilter": Array [],
  "programs": Array [],
  "relevance": Array [],
  "resourceTypes": Array [],
  "subjects": Array [],
}
`;

exports[`searchHelpers searchResultToLinkProps article 1`] = `
Object {
  "to": "/article/300",
}
`;

exports[`searchHelpers searchResultToLinkProps article without paths 1`] = `
Object {
  "to": "/404",
}
`;

exports[`searchHelpers searchResultToLinkProps learningpath 1`] = `
Object {
  "to": "/learningpath/500",
}
`;
